@@ -2,7 +2,7 @@
 // $Id$
 
 project(*Timer) : acelib {
-  sharedname = timer
+  sharedname = Timer
   dynamicflags += ACE_BUILD_SVC_DLL
   Source_Files {
     Timer_Service.cpp
@@ -11,7 +11,7 @@ project(*Timer) : acelib {
 project(*Main) : aceexe {
   exename = main
   after += Service_Configurator_Misc_Timer
-  libs  += timer
+  libs  += Timer
   Source_Files {
     main.cpp
   }
